syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package userpb;

service UserAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message User {
	string UUID = 1;
	string username = 2;
	string firstName = 3;
	string lastName = 4;
	int32 age = 5;
	repeated Address addresses = 6;
	string passwordHash = 7;
	string defaultPaymentInfoUUID = 8;
	google.protobuf.Timestamp createdAt = 9;
	google.protobuf.Timestamp updatedAt = 10;
	google.protobuf.Timestamp deletedAt = 11;
}

message Address {
	string UUID = 1;
	string userUUID = 2;
	string zipCode = 3;
	string country = 4;
	string state = 5;
	string city = 6;
	string addressLine = 7;
	bool disabled = 8;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    User user = 1;
}

message SetRequest {
	User user = 1;
}

message SetResponse {
	string UUID = 1;
}

message UpdateRequest {
	User user = 1;
}

message DeleteRequest {
    string UUID = 1;
}
